--- a/RecordTimes/app/src/main/res/layout/daily_calendar_fragment.xml
+++ b/RecordTimes/app/src/main/res/layout/daily_calendar_fragment.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".DailyCalendar">
+    android:id="@+id/daily_calendar_fragment"
+    android:layout_width="300dp"
+    android:layout_height="500dp"
+    android:background="@drawable/border"
+    tools:context=".DailyCalendarFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/time_recycler_view_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
