--- a/RecordTimes/app/src/main/res/layout/date_viewholder.xml
+++ b/RecordTimes/app/src/main/res/layout/date_viewholder.xml
@@ -9,9 +9,10 @@
     <TextView
         android:id="@+id/every_date"
         android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_height="50dp"
         android:clickable="true"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/fuu"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
