--- a/RecordTimes/app/src/main/res/layout/month_fragment.xml
+++ b/RecordTimes/app/src/main/res/layout/month_fragment.xml
@@ -10,10 +10,11 @@
         android:id="@+id/linerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="32dp"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/date_recycler_view_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
@@ -49,6 +50,7 @@
         android:id="@+id/date_recycler_view_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linerLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
