月移動（日付のバグはあり）

--- a/RecordTimes/app/src/main/res/layout/month_fragment.xml
+++ b/RecordTimes/app/src/main/res/layout/month_fragment.xml
@@ -6,6 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/year"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/fuu"
+        app:layout_constraintBottom_toTopOf="@+id/linerLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/linerLayout"
         android:layout_width="match_parent"
@@ -18,7 +28,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/pre"
+            android:id="@+id/prev"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,7 +46,7 @@
             android:textSize="24sp" />
 
         <Button
-            android:id="@+id/post"
+            android:id="@+id/next"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
