--- a/RecordTimes/app/src/main/res/layout/date_viewholder.xml
+++ b/RecordTimes/app/src/main/res/layout/date_viewholder.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/every_date_layout"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="12dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/every_date"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_width="54dp"
+        android:layout_height="54dp"
         android:clickable="true"
+        android:contentDescription="@string/fuu"
+        android:gravity="center_vertical|center_horizontal"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/fuu"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
