月フラグメントから日フラグメントへの移動・表示

--- a/RecordTimes/app/src/main/res/layout/month_fragment.xml
+++ b/RecordTimes/app/src/main/res/layout/month_fragment.xml
@@ -9,6 +9,7 @@
         android:id="@+id/year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="@string/fuu"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/linerLayout"
