--- a/RecordTimes/app/src/main/res/layout/activity_main.xml
+++ b/RecordTimes/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,9 @@
     tools:context=".MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/month_fragment_container"
+        android:id="@+id/activity_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
