--- a/RecordTimes/app/src/main/res/layout/date_fragment.xml
+++ b/RecordTimes/app/src/main/res/layout/date_fragment.xml
@@ -1,85 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@color/ghostwhite">
 
     <LinearLayout
-        android:id="@+id/dates"
-        android:layout_width="match_parent"
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/design_default_color_primary_dark"
-        android:gravity="center"
+        android:layout_gravity="top"
+        android:layout_marginTop="50dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/selected_month"
-            android:layout_width="wrap_content"
+            android:id="@+id/selected_year"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="@string/fuu" />
+            android:gravity="center"
+            android:text="@string/fuu"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/selected_month"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/fuu"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/selected_date"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="@string/selected_date" />
+            android:gravity="center"
+            android:text="@string/fuu"
+            android:textStyle="bold" />
     </LinearLayout>
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/contents"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/time_table_recycler_view"
+        android:layout_width="300dp"
+        android:layout_height="400dp"
+        android:layout_gravity="top"
+        android:background="@drawable/border"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dates"
-        tools:layout="@layout/daily_calendar_fragment" />
+        app:layout_constraintTop_toBottomOf="@+id/contents" />
 
     <EditText
         android:id="@+id/contents"
-        android:layout_width="match_parent"
+        android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="24dp"
         android:autofillHints="no"
         android:gravity="start|top"
         android:hint="@string/hint"
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/start"
+        app:layout_constraintBottom_toBottomOf="@+id/liner_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />
+        app:layout_constraintTop_toBottomOf="@+id/time_table_recycler_view" />
 
-    <Button
-        android:id="@+id/start"
-        android:layout_width="100dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="50dp"
-        android:layout_weight="1"
-        android:backgroundTint="@android:color/holo_blue_dark"
-        android:onClick="registration_start"
-        android:text="@string/start"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/end"
-        android:layout_width="100dp"
+    <LinearLayout
+        android:id="@+id/liner_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
-        android:layout_weight="1"
-        android:backgroundTint="@android:color/holo_blue_dark"
-        android:onClick="registration_end"
-        android:text="@string/end"
-        android:textColor="@color/white"
+        android:layout_marginBottom="32dp"
+        android:gravity="center|bottom"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/contents">
+
+        <Button
+            android:id="@+id/start"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="40dp"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:onClick="registration_start"
+            android:text="@string/start"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/end"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:onClick="registration_end"
+            android:text="@string/end"
+            android:textColor="@color/white" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
