--- a/RecordTimes/app/src/main/res/layout/date_viewholder.xml
+++ b/RecordTimes/app/src/main/res/layout/date_viewholder.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/every_date_layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <TextView
+    <Button
         android:id="@+id/every_date"
         android:layout_width="54dp"
-        android:layout_height="54dp"
+        android:layout_height="70dp"
+        android:background="@color/white"
         android:clickable="true"
-        android:contentDescription="@string/fuu"
         android:gravity="center_vertical|center_horizontal"
+        android:text="@string/fuu"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
