--- a/RecordTimes/app/src/main/res/layout/activity_main.xml
+++ b/RecordTimes/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout="@layout/month_fragment" />
+        tools:layout="@layout/fragment_month" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
