--- a/RecordTimes/app/src/main/res/layout/fragment_month.xml
+++ b/RecordTimes/app/src/main/res/layout/fragment_month.xml
@@ -5,27 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/year"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="@string/fuu"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/linerLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <LinearLayout
         android:id="@+id/linerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/date_recycler_view_container"
-        app:layout_constraintTop_toTopOf="@id/year"
-        tools:layout_editor_absoluteX="-38dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/prev"
@@ -38,9 +25,18 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/month"
-            android:layout_width="100dp"
+            android:id="@+id/year"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/fuu"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/month"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:background="@color/cardview_shadow_end_color"
             android:gravity="center"
             android:text="@string/month"
             android:textSize="24sp" />
@@ -56,15 +52,81 @@
             android:textSize="24sp" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/day_of_week"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/weekofday"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linerLayout">
+
+        <TextView
+            android:id="@+id/sunday"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/sunday" />
+
+        <TextView
+            android:id="@+id/monday"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/monday" />
+
+        <TextView
+            android:id="@+id/thuesday"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/thuesday" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/wednesday" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/thursday" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/friday" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/saturday" />
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/date_recycler_view_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linerLayout" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
