レイアウト修正

--- a/RecordTimes/app/src/main/res/layout/fragment_month.xml
+++ b/RecordTimes/app/src/main/res/layout/fragment_month.xml
@@ -36,7 +36,6 @@
             android:id="@+id/month"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:background="@color/cardview_shadow_end_color"
             android:gravity="center"
             android:text="@string/month"
             android:textSize="24sp" />
@@ -68,6 +67,7 @@
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize="16sp"
             android:gravity="center"
             android:text="@string/sunday" />
 
@@ -76,6 +76,7 @@
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize="16sp"
             android:gravity="center"
             android:text="@string/monday" />
 
@@ -84,38 +85,43 @@
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize="16sp"
             android:gravity="center"
             android:text="@string/thuesday" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/wednesday"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize="16sp"
             android:gravity="center"
             android:text="@string/wednesday" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/thursday"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize="16sp"
             android:gravity="center"
             android:text="@string/thursday" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/friday"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize="16sp"
             android:gravity="center"
             android:text="@string/friday" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/saturday"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize="16sp"
             android:gravity="center"
             android:text="@string/saturday" />
     </LinearLayout>
