--- a/RecordTimes/app/src/main/res/layout/viewholder_date.xml
+++ b/RecordTimes/app/src/main/res/layout/viewholder_date.xml
@@ -10,11 +10,11 @@
         android:id="@+id/every_date"
         android:layout_width="60dp"
         android:layout_height="118dp"
-        android:background="@color/white"
+        android:background="@drawable/border_date"
         android:clickable="true"
         android:gravity="top|left"
         android:text="@string/fuu"
-        android:textSize="20sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
