--- a/RecordTimes/app/src/main/res/values/colors.xml
+++ b/RecordTimes/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="ghostwhite">#f8f8ff</color>
-    <color name="weekofday">#F2F2F2</color>
+    <color name="weekofday">#f1e9ea</color>
+    <color name="white_gray">#FAFAFA</color>
+    <color name="themes">#D7CCC8</color>
 </resources>
