背景を押下時、キーボードを隠す

--- a/RecordTimes/app/src/main/res/layout/fragment_month.xml
+++ b/RecordTimes/app/src/main/res/layout/fragment_month.xml
@@ -56,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginTop="8dp"
-        android:background="@color/weekofday"
+        android:background="@color/week_of_day"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
