--- a/RecordTimes/app/src/main/res/layout/fragment_date.xml
+++ b/RecordTimes/app/src/main/res/layout/fragment_date.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint_layout_date"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/ghostwhite">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/linearLayout"
