--- a/RecordTimes/app/src/main/res/layout/viewholder_date.xml
+++ b/RecordTimes/app/src/main/res/layout/viewholder_date.xml
@@ -13,6 +13,7 @@
         android:background="@drawable/border_date"
         android:clickable="true"
         android:gravity="top|left"
+        android:paddingLeft="6dp"
         android:text="@string/fuu"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
