--- a/RecordTimes/app/src/main/res/values/colors.xml
+++ b/RecordTimes/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="week_of_day">#f1e9ea</color>
     <color name="white_gray">#FAFAFA</color>
     <color name="themes">#D7CCC8</color>
+    <color name="tryb">#EDE2D5</color>
 </resources>
