--- a/RecordTimes/app/src/main/res/layout/viewholder_time_table.xml
+++ b/RecordTimes/app/src/main/res/layout/viewholder_time_table.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="50dp">
 
     <TextView
         android:id="@+id/every_time_table"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_weight="1"
         android:ems="10"
         android:text="@string/time_view_holder" />
