--- a/RecordTimes/app/src/main/res/layout/viewholder_time_table.xml
+++ b/RecordTimes/app/src/main/res/layout/viewholder_time_table.xml
@@ -9,6 +9,7 @@
         android:layout_height="50dp"
         android:layout_weight="1"
         android:ems="10"
-        android:text="@string/time_view_holder" />
+        android:text="@string/time_view_holder"
+        android:textSize="16dp" />
 
 </LinearLayout>
