モーダル内容を使い分ける

--- a/RecordTimes/app/src/main/res/layout/fragment_date.xml
+++ b/RecordTimes/app/src/main/res/layout/fragment_date.xml
@@ -70,6 +70,7 @@
                 android:id="@+id/rec_only_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="30dp"
@@ -81,6 +82,7 @@
                 android:id="@+id/rec_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="30dp"
                 android:clickable="true"
