--- a/RecordTimes/app/src/main/res/drawable/modal_border.xml
+++ b/RecordTimes/app/src/main/res/drawable/modal_border.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 android:shape="rectangle" >
 
-    <stroke
-        android:width="2dp" />
+    <stroke android:width="1dp" />
+    <solid android:color="@color/tryb" />
+    <corners android:radius="20dp" />
 </shape>
