--- a/RecordTimes/app/src/main/res/drawable/modal_edit_text.xml
+++ b/RecordTimes/app/src/main/res/drawable/modal_edit_text.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-android:shape="rectangle" >
+    android:shape="rectangle" >
 
-    <solid android:color="@color/tryb" />
+    <solid android:color="@color/white" />
+
+    <stroke android:width="1.4dp" />
 
     <corners android:radius="20dp" />
 
