--- a/RecordTimes/app/src/main/res/layout/fragment_date.xml
+++ b/RecordTimes/app/src/main/res/layout/fragment_date.xml
@@ -17,6 +17,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"
             android:gravity="center"
+            android:scrollbars="vertical"
             app:layout_constraintBottom_toTopOf="@+id/time_table_recycler_view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
