--- a/RecordTimes/app/src/main/res/layout/fragment_modal_detail.xml
+++ b/RecordTimes/app/src/main/res/layout/fragment_modal_detail.xml
@@ -64,8 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="24dp"
                 android:onClick="registration_start"
-                android:text="@string/start"
-                android:textColor="@color/white" />
+                android:text="@string/start" />
 
             <Button
                 android:id="@+id/end"
@@ -73,8 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
                 android:onClick="registration_end"
-                android:text="@string/end"
-                android:textColor="@color/white" />
+                android:text="@string/end" />
         </LinearLayout>
 
     </RelativeLayout>
