--- a/RecordTimes/app/src/main/res/layout/fragment_modal_detail.xml
+++ b/RecordTimes/app/src/main/res/layout/fragment_modal_detail.xml
@@ -7,7 +7,7 @@
     android:layout_height="320dp"
     android:layout_gravity="center"
     android:background="@drawable/modal_border"
-    tools:context=".ModalFragment">
+    tools:context=".InsertModalFragment">
 
     <TextView
         android:id="@+id/textView"
