--- a/RecordTimes/app/src/main/res/layout/fragment_modal_only_time.xml
+++ b/RecordTimes/app/src/main/res/layout/fragment_modal_only_time.xml
@@ -7,7 +7,7 @@
     android:layout_height="200dp"
     android:layout_gravity="center"
     android:background="@drawable/modal_border"
-    tools:context=".ModalFragment">
+    tools:context=".InsertModalFragment">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/close"
