--- a/RecordTimes/app/src/main/res/layout/fragment_modal_detail.xml
+++ b/RecordTimes/app/src/main/res/layout/fragment_modal_detail.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/modal_detail"
+    android:id="@+id/fragment_modal_detail"
     android:layout_width="320dp"
     android:layout_height="320dp"
     android:layout_gravity="center"
