--- a/RecordTimes/app/src/main/res/layout/fragment_modal_only_time.xml
+++ b/RecordTimes/app/src/main/res/layout/fragment_modal_only_time.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/modal_update"
+    android:id="@+id/fragment_modal_only_time"
     android:layout_width="300dp"
     android:layout_height="200dp"
     android:layout_gravity="center"
