--- a/RecordTimes/app/src/main/res/drawable/modal_border.xml
+++ b/RecordTimes/app/src/main/res/drawable/modal_border.xml
@@ -3,6 +3,7 @@
 android:shape="rectangle" >
 
     <stroke android:width="1dp" />
-    <solid android:color="@color/tryb" />
+    <solid android:color="@color/Primary_container" />
     <corners android:radius="20dp" />
+
 </shape>
