--- a/RecordTimes/app/src/main/res/values/colors.xml
+++ b/RecordTimes/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="week_of_day">#f1e9ea</color>
     <color name="white_gray">#FAFAFA</color>
     <color name="themes">#D7CCC8</color>
-    <color name="tryb">#EDE2D5</color>
+<!--    #f6eae9-->
+    <color name="Primary_container">#f1ece9</color>
+    <color name="test2">#BBDEFB</color>
+    <color name="test">#e8edf0</color>
 </resources>
