--- a/RecordTimes/app/src/main/res/values/themes.xml
+++ b/RecordTimes/app/src/main/res/values/themes.xml
@@ -1,8 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.RecordTime" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <!--    isDoneのオン    -->
+<!--        <item name="colorPrimary">@color/black</item>-->
+        <!--        flow ボタン ※時計の時間タイトル部分とは別-->
+        <item name="colorPrimaryContainer">@color/Primary_container</item>
+
+<!--        日付の丸（selected）-->
+<!--        <item name="colorSecondary">@color/themes</item>-->
+
+<!--        時計の背景-->
+<!--        <item name="colorOnSurface">@color/black</item>-->
 
         <item name="android:statusBarColor">@color/themes</item>
     </style>
